# so2_equi_rl

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  environment_ms3.yml  pyproject.toml
outputs/cnn_dqn_block_pulling_s0_20260415_121335/info/: losses.npy  parameters.json  td_errors.npy
outputs/cnn_dqn_block_pulling_s0_20260415_121335/tb/: events.out.tfevents.1776269615.wadewilliams-ThinkPad-P1-Gen-7.1177157.0
outputs/cnn_sac_block_picking_s0_20260413_212135/info/: eval_rewards.npy  losses.npy  parameters.json  rewards.npy  td_errors.npy
outputs/cnn_sac_block_picking_s1_20260414_002118/info/: eval_rewards.npy  losses.npy  parameters.json  rewards.npy  td_errors.npy
outputs/cnn_sac_block_pulling_s0_20260413_170300/info/: eval_rewards.npy  losses.npy  parameters.json  rewards.npy  td_errors.npy
outputs/cnn_sac_block_pulling_s1_20260413_191633/info/: eval_rewards.npy  losses.npy  parameters.json  rewards.npy  td_errors.npy
outputs/cnn_sac_drawer_opening_s0_20260414_031258/info/: losses.npy  parameters.json  rewards.npy  td_errors.npy
patches/: helping_hands_auto_reset.patch
report/: final_report.tex  poster.tex  references.bib
scripts/: buffer_check.py  launch_matrix.py  matrix.yaml  matrix_ms3_sac_pickcube.yaml  plot_results.py  pretrain_ferm.py  render_env_panel.py  run_bulletarm_dqn_s1.sh  run_equi_pickcube_dqn.sh  run_ms3_extension.sh  smoke_test_maniskill.py  train_dqn.py  train_sac.py  train_sac_drq.py  train_sac_ferm.py  train_sac_rad.py
src/so2_equi_rl/: __init__.py  buffer.py  env.py  launch.py
tests/: test_buffer.py  test_encoder.py  test_env.py  test_sac_rad.py
(+194 files in other folders)
